# proyecto_tienda

./: pyproject.toml
catalogo/: models.py  urls.py  views.py
catalogo/migrations/: 0001_initial.py
catalogo/templates/catalogo/: index.html
templates/: base_generic.html
tienda_instrumentos/: asgi.py  settings.py  urls.py  wsgi.py
